--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="untree_co--overlayer"></div>
     <div class="loader">
       <div class="spinner-border text-primary" role="status">
-        <span class="sr-only">Loading...</span>
+        <span class="sr-only"> Loading Himalayan Luxury Properties...</span>
       </div>
     </div>
 
@@ -51,40 +51,55 @@
       <nav class="untree_co--site-nav js-sticky-nav">
         <div class="container d-flex align-items-center">
           <div class="logo-wrap">
-            <a href="index.html" class="untree_co--site-logo">Luxury Hotels</a>
+            <a href="index.html" class="untree_co--site-logo">
+              <img src="images/logo.png" alt="Adora Hospitality Solutions" style="max-width: 100%; height: auto;">
+            </a>
           </div>
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
             <ul class="site-nav-ul js-clone-nav">
               <li class="active"><a href="index.html">Home</a></li>
               <li class="has-children">
-                <a href="rooms.html">Properties & Rooms</a>
+                <a href="rooms.html">View Properties & Rooms</a>
                 <ul class="dropdown">
                   <li class="has-children">
-                    <a href="#">King Bedroom</a>
+                    <a href="#">Old Manali</a>
                     <ul class="dropdown">
                       <li>
-                        <a href="#">King Bedroom</a>
-                      </li>
-                      <li>
-                        <a href="#">Queen &amp; Double Bedroom</a>
-                      </li>
-                      <li>
-                        <a href="#">Le Voila Suite</a>
+                        <a href="#">Starway Homes</a>
                       </li>
                     </ul>
                   </li>
-                  <li>
-                    <a href="#">Queen &amp; Double Bedroom</a>
+                  <li class="has-children">
+                    <a href="#">Simsa</a>
+                    <ul class="dropdown">
+                      <li>
+                        <a href="#">Swiss Cottage</a>
+                      </li>
+                      <li>
+                        <a href="#">Amaira</a>
+                      </li>
+                      </ul>
                   </li>
-                  <li>
-                    <a href="#">Le Voila Suite</a>
+                  <li class="has-children">
+                    <a href="#">Prini</a>
+                    <ul class="dropdown">
+                      <li>
+                        <a href="#">Juniper House</a>
+                      </li>
+                      <li>
+                        <a href="#">Terra & Glen</a>
+                      </li>
+                      </ul>
                   </li>
                 </ul>
               </li>
               <li><a href="amenities.html">Facilities & Amenities</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
+              <li><a href="gallery.html">Look Inside</a></li>
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
+              <li>
+                  <a href="booking.html" class="booking-button">Booking & Reservation</a>
+              </li>
             </ul>
           </div>
           <div class="icons-wrap text-md-right">
@@ -126,7 +141,7 @@
                   <div class="site-hero-contents text-center" data-aos="fade-up">
                     <h1 class="hero-heading">Luxury Hotels by Adora Hospitality</h1>
                     <div class="sub-text">
-                      <p>Another free awesome templates for Hotels and any kind of website by <a href="https://untree.co/" target="_blank" class="text-white font-weight-bold">Untree.co</a>. See our <a href="https://untree.co/license/" class="text-white font-weight-bold">license page</a> for more usage details</p>
+                      <p>Elegance in the Heart of the Himalayas — Experience Luxury with Adora Hospitality </p>
                     </div>
                   </div>
                 </div>
@@ -139,7 +154,7 @@
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-7">
                   <div class="site-hero-contents text-center" data-aos="fade-up">
-                    <h1 class="hero-heading">Enjoy Your Stay</h1>
+                    <h1 class="hero-heading">Enjoy Your Stay — Where Himalayan Serenity Meets World-Class Luxury</h1>
                   </div>
                 </div>
               </div>
@@ -151,7 +166,7 @@
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-10">
                   <div class="site-hero-contents text-center" data-aos="fade-up">
-                    <h1 class="hero-heading">Away from the Hustle and Bustle of City Life</h1>
+                    <h1 class="hero-heading">Away from the Hustle and Bustle of City Life — Discover Peace in the Lap of the Himalayas.</h1>
                   </div>
                 </div>
               </div>
@@ -187,10 +202,10 @@
               </div> <!-- .suite -->
 
               <div class="suite-contents" data-jarallax-element="50">
-                <h2 class="suite-title">King Bedroom</h2>
+                <h2 class="suite-title">Luxury Rooms</h2>
                 <div class="suite-excerpt">
-                  <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality mattress in a small room to large suites with bigger.</p>
-                  <p><a href="#" class="readmore">Room Details</a></p>
+                  <p>Wake up to panoramic Himalayan views in our exquisitely designed Luxury Rooms. Featuring plush interiors, private balconies, and top-tier amenities — perfect for indulgent escapes.</p>
+                  <p><a href="#" class="readmore">Check Details</a></p>
                 </div>
               </div>
             </div>
@@ -211,10 +226,35 @@
               </div>
 
               <div class="suite-contents" data-jarallax-element="50">
-                <h2 class="suite-title">Queen &amp; Double Bedroom</h2>
+                <h2 class="suite-title">Deluxe rooms</h2>
                 <div class="suite-excerpt pr-5">
-                  <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality mattress in a small room to large suites with bigger</p>
-                  <p><a href="#" class="readmore">Room Details</a></p>
+                  <p>Blending comfort with charm, our Deluxe Rooms offer serene mountain vistas and cozy elegance — ideal for couples or solo travelers seeking refined peace.</p>
+                  <p><a href="#" class="readmore">Check Details</a></p>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="suite-wrap overlap-image-2">
+
+              <div class="suite">
+                <div class="image-stack">
+                  <div class="image-stack-item image-stack-item-top">
+                    <div class="overlay"></div>
+                    <img src="images/room_3_a.jpg" alt="Image" class="img-fluid pic1">
+                  </div>
+                  <div class="image-stack-item image-stack-item-bottom" data-jarallax-element="-50">
+                    <div class="overlay"></div>
+                    <img src="images/room_4_b.jpg" alt="Image" class="img-fluid pic2">
+                  </div>
+                </div>
+              </div>
+
+              <div class="suite-contents" data-jarallax-element="50">
+                <h2 class="suite-title">Standard rooms</h2>
+                <div class="suite-excerpt pr-5">
+                  <p>Simple yet serene, our Standard Rooms provide all the essentials for a restful stay amid the natural beauty of the Himalayas — comfort, warmth, and tranquility.</p>
+                  <p><a href="#" class="readmore">Check Details</a></p>
                 </div>
               </div>
 
@@ -239,7 +279,7 @@
                     <img src="images/svg/parking.svg" alt="Image" class="img-fluid">
                   </div>
                   <h3>Free Self-Parking</h3>
-                  <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality.</p>
+                  <p>Guests have access to convenient on-site self-parking at no additional cost..</p>
                   <p><p><a href="#" class="readmore reverse">Read More</a></p></p>
                 </div>
               </div>
@@ -250,7 +290,7 @@
                     <img src="images/svg/internet.svg" alt="Image" class="img-fluid">
                   </div>
                   <h3>High speed Internet access</h3>
-                  <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality.</p>
+                  <p>Reliable high-speed Wi-Fi is available in all rooms and common areas, even in remote locations.</p>
                   <p><p><a href="#" class="readmore reverse">Read More</a></p></p>
                 </div>
               </div>
@@ -259,8 +299,8 @@
                   <div class="media-29191-icon">
                     <img src="images/svg/wifi.svg" alt="Image" class="img-fluid">
                   </div>
-                  <h3>Complimentary WiFi in public areas</h3>
-                  <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality.</p>
+                  <h3>Private Kitchen & Chef</h3>
+                  <p>Guests can enjoy a private kitchen setup with an on-demand chef. Meals are fully customizable, and guests may choose specific ingredients for their preferences or dietary needs.</p>
                   <p><p><a href="#" class="readmore reverse">Read More</a></p></p>
                 </div>
               </div>
@@ -270,8 +310,8 @@
                   <div class="media-29191-icon">
                     <img src="images/svg/elevator.svg" alt="Image" class="img-fluid">
                   </div>
-                  <h3>Elevators</h3>
-                  <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality.</p>
+                  <h3>Barbecue</h3>
+                  <p>Barbecue facilities are available for personal or group use, with equipment and setup provided on request.</p>
                   <p><p><a href="#" class="readmore reverse">Read More</a></p></p>
                 </div>
               </div>
@@ -282,8 +322,8 @@
                     <img src="images/svg/partners.svg" alt="Image" class="img-fluid">
                   </div>
 
-                  <h3>Meeting rooms</h3>
-                  <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality.</p>
+                  <h3>Personal TV and Entertainment</h3>
+                  <p>Each room is equipped with a personal television offering satellite channels, streaming options, and entertainment apps.</p>
                   <p><p><a href="#" class="readmore reverse">Read More</a></p></p>
                 </div>
               </div>
@@ -293,7 +333,7 @@
                     <img src="images/svg/washing-machine.svg" alt="Image" class="img-fluid">
                   </div>
                   <h3>Laundry and Valet service</h3>
-                  <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality.</p>
+                  <p>Professional laundry and valet services are available daily, including same-day cleaning upon request.</p>
                   <p><p><a href="#" class="readmore reverse">Read More</a></p></p>
                 </div>
               </div>
@@ -348,7 +388,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3 class="m-0 p-0">If you have any special requests, please feel free to call us. <a href="tel://+123456789012">+12.345.678.9012</a></h3>
+                <h3 class="m-0 p-0">If you have any special requests, please feel free to call us at <a href="tel://+917807111209">+917807111209</a> or email at <a href="mailto:info@adorahospitality.com">info@adorahospitality.com </a> </h3>
               </div>
             </div>
           </div>
@@ -362,7 +402,7 @@
           <div class="row">
             <div class="col-md-4 pr-md-5">
               <h3>About Us</h3>
-              <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality.</p>
+              <p>Adora Hospitality offers tailored stays in the heart of the Himalayas, where comfort meets breathtaking natural surroundings. Our properties combine modern amenities with personalized service, ensuring every guest enjoys a seamless and memorable experience in the mountains.</p>
               <p><a href="#" class="readmore">Read more</a></p>
             </div>
             <div class="col-md-8 ml-auto">
@@ -370,25 +410,28 @@
                 <div class="col-md-3">
                   <h3>Navigation</h3>
                   <ul class="list-unstyled">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Rooms</a></li>
-                    <li><a href="#">Amenities</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="rooms.html">View Properties & Rooms</a></li>
+                    <li><a href="amenities.html">Facilities & Amenities</a></li>
+                    <li><a href="gallery.html">Look Inside</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li>
+                        <a href="booking.html" class="booking-button">Make Reservation Now</a>
+                    </li>
                   </ul>
                 </div>
                 <div class="col-md-9 ml-auto">
                   <div class="row mb-3">
                     <div class="col-md-6">
                       <h3>Address</h3>
-                      <address>273 South Riverview Rd. <br> New York, NY 10011</address>
+                      <address>Manali, Old Manali, Manu Temple Road<br>Himachal Pradesh,175131</address>
                     </div>
                     <div class="col-md-6">
                       <h3>Telephone</h3>
                       <p>
-                        <a href="#">+1 234 5678 910</a> <br>
-                        <a href="#">+2 234 5678 910</a>
+                        <a href="tel://+917807111209">+91 7807111209</a> <br>
+                        <a href="tel://+917017192404">+91 7017192404</a>
                       </p>
                     </div>
                   </div>
@@ -410,24 +453,28 @@
             <div class="col-md-6 text-md-left">
               <!-- Link back to Untree.co can't be removed. Template is licensed under CC BY 3.0. If you purchased a license you can remove this. -->
               <p>
-                Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="index.html">Untree.co</a>. All Rights Reserved. Design by <a href="https://untree.co/" target="_blank" class="text-primary">Untree.co</a>
+                Copyright &copy;<script>document.write(new Date().getFullYear());</script> <a href="index.html">Adora Hospitality Solutions</a>.
               </p>
             <!-- Link back to Untree.co can't be removed. Template is licensed under CC BY 3.0. If you purchased a license you can remove this. -->
             </div>
             <div class="col-md-6 text-md-right">
               <ul class="icons-top icons-dark">
               <li>
-                <a href="#"><span class="icon-facebook"></span></a>
+                <a href="https://facebook.com/adorahospitality"><span class="icon-facebook"></span></a>
               </li>
+                <!--
               <li>
                 <a href="#"><span class="icon-twitter"></span></a>
               </li>
               <li>
+              -->
                 <a href="#"><span class="icon-instagram"></span></a>
               </li>
+                <!--
               <li>
                 <a href="#"><span class="icon-tripadvisor"></span></a>
               </li>
+              -->
             </ul>
 
             </div>
