--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container d-flex align-items-center">
           <div class="logo-wrap">
             <a href="index.html" class="untree_co--site-logo">
-              <img src="images/logo.png" alt="Adora Hospitality Solutions" style="max-width: 100%; height: auto;">
+              <img src="images/logo.png" alt="Adora Hospitality Solutions" class="logo-img">
             </a>
           </div>
           <div class="site-nav-ul-wrap text-center d-none d-lg-block">
