--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li>
-                  <a href="booking.html" class="booking-button">Booking & Reservation</a>
+                  <a href="booking.html" class="booking-button">Book & Reserve</a>
               </li>
             </ul>
           </div>
