--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
               </div>
 
               <div class="suite-contents" data-jarallax-element="50">
-                <h2 class="suite-title">Standard rooms</h2>
+                <h2 class="suite-title">Standard Rooms</h2>
                 <div class="suite-excerpt pr-5">
                   <p>Simple yet serene, our Standard Rooms provide all the essentials for a restful stay amid the natural beauty of the Himalayas — comfort, warmth, and tranquility.</p>
                   <p><a href="#" class="readmore">Check Details</a></p>
