--- a/booking-app/index.html
+++ b/booking-app/index.html
@@ -4,9 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Adora Booking</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-<link rel="stylesheet" href="/booking-app/css/animate.css">
+<link rel="stylesheet" href="../booking-app/css/animate.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="/booking-app/style.css"/>
+<link rel="stylesheet" type="text/css" href="../booking-app/style.css"/>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 <!-- Font Google -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -20,7 +20,7 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="fas fa-bars"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"> <a class="nav-link" href="index.html" data-scroll-nav="0">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="../index.html" data-scroll-nav="0">Home</a> </li>
         <!--<li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">About</a> </li>-->
         <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="2">Features</a> </li>
         <!--<li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="3">Team</a> </li>-->
@@ -47,16 +47,16 @@
               Adora Booking App offers a seamless experience for exploring, selecting, and reserving premium stays in the Himalayan region. Whether you seek luxury, comfort, or affordability, our platform ensures a user-friendly and reliable booking process.
             </p>
             <ul>
-              <li><a href="#"><img src="/booking-app/images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
-              <li><a href="#"><img src="/booking-app/images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
+              <li><a href="#"><img src="../booking-app/images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
+              <li><a href="#"><img src="../booking-app/images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
             </ul>
           </div>
         </div>
-        <div class="col-md-4 col-sm-12"> <img src="/booking-app/images/iphone-screen.png" class="img-fluid wow fadeInUp"/> </div>
+        <div class="col-md-4 col-sm-12"> <img src="../booking-app/images/iphone-screen.png" class="img-fluid wow fadeInUp"/> </div>
       </div>
     </div>
   </div>
-  <span class="svg-wave"> <img class="svg-hero" src="/booking-app/images/applight-wave.svg"> </span> </section>
+  <span class="svg-wave"> <img class="svg-hero" src="../booking-app/images/applight-wave.svg"> </span> </section>
 
 <!-------Banner End-------> 
 
@@ -155,7 +155,7 @@
               </div>
             </div>
             <div class="col-md-4 d-none d-md-block d-lg-block">
-              <div class="feature-mobile"> <img src="/booking-app/images/iphone-screen-with-shadow.png" class="img-fluid wow fadeInUp"/> </div>
+              <div class="feature-mobile"> <img src="../booking-app/images/iphone-screen-with-shadow.png" class="img-fluid wow fadeInUp"/> </div>
             </div>
             <div class="col-md-4 col-sm-12">
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
@@ -245,15 +245,15 @@
           <div class="offset-md-2 col-md-8 col-sm-12">
             <div class="slider">
               <div class="slider-item">
-                <div class="test-img"><img src="/booking-app/images/user1.jpg" alt="Placeholder" width="157" height="157"></div>
+                <div class="test-img"><img src="../booking-app/images/user1.jpg" alt="Placeholder" width="157" height="157"></div>
                 <div class="test-text"><span class="title"><span>John Michal</span> Digital Designer</span> Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam eratvo lutpat.</div>
               </div>
               <div class="slider-item">
-                <div class="test-img"><img src="/booking-app/images/user3.jpg" alt="Placeholder" width="157" height="157"></div>
+                <div class="test-img"><img src="../booking-app/images/user3.jpg" alt="Placeholder" width="157" height="157"></div>
                 <div class="test-text"><span class="title"><span>Steve Smith</span> App User</span> Euismod tincidunt ut laoreet dolore magna aliquam eratvo lutpat. Ut wisi enim ad minim veniam, quis nostrud v</div>
               </div>
               <div class="slider-item">
-                <div class="test-img"><img src="/booking-app/images/user3.jpg" alt="Placeholder" width="157" height="157"></div>
+                <div class="test-img"><img src="../booking-app/images/user3.jpg" alt="Placeholder" width="157" height="157"></div>
                 <div class="test-text"><span class="title"><span>Gordon Shaw</span> Blogger</span> Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam eratvo lutpat. Ut wisi enim ad minim veniam, quis nostrud v</div>
               </div>
             </div>
@@ -391,8 +391,8 @@
       <div class="col-md-12">
         <div class="section-content text-center">
           <ul>
-            <li><a href="#"><img src="/booking-app/images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
-            <li><a href="#"><img src="/booking-app/images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
+            <li><a href="#"><img src="../booking-app/images/appstore.png" class="wow fadeInUp" data-wow-delay="0.4s"/></a></li>
+            <li><a href="#"><img src="../booking-app/images/playstore.png" class="wow fadeInUp" data-wow-delay="0.7s"/></a></li>
           </ul>
         </div>
       </div>
