--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li>
-                  <a href="../booking-app/index.html" class="booking-button">Book & Reserve</a>
+                  <a href="booking-app/index.html" class="booking-button">Book & Reserve</a>
               </li>
             </ul>
           </div>
