--- a/booking-app/index.html
+++ b/booking-app/index.html
@@ -16,17 +16,18 @@
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
-  <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="images/logo.png" alt="logo" class="logo-1"> </a>
+  <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="./images/logo.png" alt="logo" class="logo-1"> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="fas fa-bars"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item"> <a class="nav-link" href="../index.html" data-scroll-nav="0">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="../index.html">Home Page</a> </li>
         <!--<li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="1">About</a> </li>-->
         <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="2">Features</a> </li>
         <!--<li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="3">Team</a> </li>-->
         <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="4">Testimonials</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="5">Faq</a> </li>
         <li class="nav-item"> <a class="nav-link" href="#" data-scroll-nav="6">Contact Us</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="https://admin.adorahospitality.com/">List Your Own Properties</a> </li>
       </ul>
     </div>
   </div>
@@ -127,7 +128,7 @@
         <div class="sectioner-header text-center">
           <h3>Features</h3>
           <span class="line"></span>
-          <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p>Experience the ease of booking high-end stays without the clutter of typical travel apps. With Adora Booking App, booking luxury is as simple as logging in, selecting your stay, and confirming. No distractions, no hassle—just elegance and efficiency.</p>
         </div>
         <div class="section-content text-center">
           <div class="row">
@@ -135,21 +136,21 @@
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.2s">
                 <div class="media-body text-right media-right-margin">
                   <h5>Fast Processing</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <p>Our app removes unnecessary steps—just search, tap, and book. Everything is designed to be intuitive and instant, unlike modern apps that overwhelm with endless options.</p>
                 </div>
                 <div class="media-right icon-border"> <span class="fa fa-bolt" aria-hidden="true"></span> </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
                 <div class="media-body text-right media-right-margin">
                   <h5>Low Power Consuming</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <p>Optimized to use minimal device resources, the app ensures a smooth experience even on low battery or older devices.</p>
                 </div>
                 <div class="media-right icon-border"> <span class="fa fa-battery-full" aria-hidden="true"></span> </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.6s">
                 <div class="media-body text-right media-right-margin">
-                  <h5>Wifi Compatibility</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <h5>Very Clean and Minimalist Interface Design</h5>
+                  <p>A luxury booking app should look and feel luxurious. Our interface is simple, modern, and distraction-free so your focus stays on your stay.</p>
                 </div>
                 <div class="media-right icon-border"> <span class="fa fa-wifi" aria-hidden="true"></span> </div>
               </div>
@@ -162,21 +163,21 @@
                 <div class="media-left icon-border media-right-margin"> <span class="fa fa-check-double" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
                   <h5>Regular Updates</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <p>We frequently refine the app to improve security, speed, and reliability, so it always feels fresh and responsive.</p>
                 </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.4s">
                 <div class="media-left icon-border media-right-margin"> <span class="fa fa-dollar-sign" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
                   <h5>Save Money</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <p>Listings come directly from verified hosts—no middlemen, no platform fees, and absolutely no hidden charges.</p>
                 </div>
               </div>
               <div class="media single-feature wow fadeInUp" data-wow-delay="0.6s">
                 <div class="media-left icon-border media-right-margin"> <span class="fa fa-hdd" aria-hidden="true"></span> </div>
                 <div class="media-body text-left">
-                  <h5>Unlimited Storage</h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididugnt ut labore</p>
+                  <h5>Personalized Stay Options</h5>
+                  <p>Enjoy features tailored to you—from private chefs to spa services—based on your preferences and booking history.</p>
                 </div>
               </div>
             </div>
@@ -275,33 +276,33 @@
         <div class="sectioner-header text-center">
           <h3>Frequently Asked Questions</h3>
           <span class="line"></span>
-          <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p>Here are answers to some of the most common questions about the Adora Booking App and our booking process.</p>
         </div>
         <div class="section-content">
           <div class="row">
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.2s">
-              <h4>Nam tellus felis, dignissim quis dui ?</h4>
-              <p>Suspendisse fermentum placerat enim, at pellentesque augue. Nullam elit est, ultricies et tellus ac, euismod placerat orci. Donec commodo.</p>
+              <h4>How is Adora different from other booking apps? ?</h4>
+              <p>Adora focuses on simplicity and luxury. No ads, no clutter—just an elegant interface that lets you book premium stays in seconds. </p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.2s">
-              <h4>Mauris scelerisque, dui non faucibus vulputate ?</h4>
-              <p>Sed tempus in neque ac rhoncus. Phasellus vehicula, erat tempor malesuada egestas, mauris tellus malesuada erat, at vestibulum nulla ex et lectus. Nullam elit est, ultricies et tellus ac, euismod placerat orci.</p>
+              <h4>Are there any hidden fees or extra charges?</h4>
+              <p>Absolutely not. What you see is what you pay. Our listings come directly from verified hosts, with no platform commissions or third-party markups. </p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.4s">
-              <h4>Nullam elit est, ultricies et tellus ac ?</h4>
-              <p>Ut vestibulum euismod aliquet. Quisque nec malesuada nibh. Vivamus euismod nunc eu leo faucibus, vel elementum justo posuere. In sed varius nisi. Curabitur id porta ipsum, et vestibulum dui.</p>
+              <h4>Can I customize my stay or request special services? ?</h4>
+              <p>Yes. Many of our hosts offer additional services such as private chefs, chauffeurs, or spa access. These can be selected during the booking process or requested directly. </p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.4s">
-              <h4>Suspendisse fermentum placerat enim, at pellentesque augue elit est ?</h4>
-              <p>Vivamus euismod nunc eu leo faucibus, vel elementum justo posuere. In sed varius nisi.</p>
+              <h4>Is the app available on all devices?</h4>
+              <p>Yes. Adora Booking app is optimized for both Android and iOS devices and works seamlessly across smartphones and tablets.</p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.6s">
-              <h4>Ut vestibulum euismod aliquet. Quisque nec malesuada nibh ?</h4>
-              <p>Suspendisse fermentum placerat enim, at pellentesque augue. Nullam elit est, ultricies et tellus ac, euismod placerat orci. Donec commodo dapibus congue.</p>
+              <h4>How secure is my personal and payment information?</h4>
+              <p>We use industry-grade encryption and secure gateways to ensure that your personal and payment details remain fully protected at all times. </p>
             </div>
             <div class="col-md-6 faq-content wow fadeInUp" data-wow-delay="0.6s">
-              <h4>Donec commodo dapibus congue ?</h4>
-              <p>Nullam elit est, ultricies et tellus ac, euismod placerat orci fermentum placerat enim, at pellentesque augue. Nullam elit est, ultricies et tellus ac, euismod placerat orci. Donec commodo dapibus congue.</p>
+              <h4>Do I need to create an account to make a booking??</h4>
+              <p>Yes, but setup is instant. Once logged in, all your bookings and preferences are saved for a seamless experience across your devices. </p>
             </div>
           </div>
         </div>
@@ -320,7 +321,10 @@
         <div class="sectioner-header text-center">
           <h3>Contact us</h3>
           <span class="line"></span>
-          <p>Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p> Have questions or need personalized assistance? We’re here to help.
+              Our customer support is available 24/7 to assist with bookings, modifications, or any inquiries.
+              Whether you're seeking a custom stay or troubleshooting an issue, our team ensures your luxury experience is never compromised.
+          </p>
         </div>
         <div class="section-content">
           <div class="row">
@@ -383,9 +387,9 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center white">
-          <h3>Download Our App</h3>
+          <h3>Download Adora Booking App and Book Your Stay Seamlessly</h3>
           <span class="line"></span>
-          <p class="white">Sed quis nisi nisi. Proin consectetur porttitor dui sit amet viverra. Fusce sit amet lorem faucibus, vestibulum ante in, pharetra ante.</p>
+          <p class="white">Download now and enjoy a beautifully simple interface designed for discerning travelers. Booking your next high-end stay is just a tap away. </p>
         </div>
       </div>
       <div class="col-md-12">
