--- a/gallery.html
+++ b/gallery.html
@@ -246,7 +246,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3 class="m-0 p-0">If you have any special requests, please feel free to call us. <a href="tel://+123456789012">+12.345.678.9012</a></h3>
+                <h3 class="m-0 p-0">If you have any special requests, please feel free to call us. <a href="tel://+917807111209">+917807111209</a> or email at <a href="mailto:info@adorahospitality.com">info@adorahospitality.com </a> </h3>
               </div>
             </div>
           </div>
