--- a/contact.html
+++ b/contact.html
@@ -67,10 +67,13 @@
             <ul class="site-nav-ul js-clone-nav">
               <li class="active"><a href="index.html">Home</a></li>
               <li class="has-children">
-                <a href="rooms.html">View Properties & Rooms</a>
+                <a href="#">View Properties & Rooms</a>
                 <ul class="dropdown">
                   <li class="has-children">
-                    <a href="#">Old Manali</a>
+                    <a href="rooms.html">View Rooms Types</a>
+                  </li>
+                  <li class="has-children">
+                    <a href="#">Hotels in Old Manali</a>
                     <ul class="dropdown">
                       <li>
                         <a href="#">Starway Homes</a>
@@ -78,7 +81,7 @@
                     </ul>
                   </li>
                   <li class="has-children">
-                    <a href="#">Simsa</a>
+                    <a href="#">Hotels in Simsa</a>
                     <ul class="dropdown">
                       <li>
                         <a href="#">Swiss Cottage</a>
@@ -89,7 +92,7 @@
                       </ul>
                   </li>
                   <li class="has-children">
-                    <a href="#">Prini</a>
+                    <a href="#">Hotels in Prini</a>
                     <ul class="dropdown">
                       <li>
                         <a href="#">Juniper House</a>
@@ -106,7 +109,7 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li>
-                  <a href="booking.html" class="booking-button">Book & Reserve</a>
+                  <a href="booking-app/booking.html" class="booking-button">Book & Reserve</a>
               </li>
             </ul>
           </div>
@@ -191,31 +194,35 @@
                 <div class="col-md-4 ml-auto"  data-aos="fade-up" data-aos-delay="200">
                   <div class="media-29190">
                     <span class="label">Email</span>
-                    <p><a href="#">info@Untree.co</a></p>
+                    <p><a href="#">info@adorahospitality.com</a></p>
                   </div>
                   <div class="media-29190">
                     <span class="label">Phone</span>
-                    <p><a href="#">+30 931 3829 399</a></p>
+                    <p><a href="#">+91 7807111209</a></p>
                   </div>
                   <div class="media-29190">
                     <span class="label">Address</span>
-                    <p>273 South Riverview Rd. New York, NY 10011</p>
+                    <p>Manali, Old Manali, Manu Temple Road<br>Himachal Pradesh,175131</p>
                   </div>
                   <div class="media-29190">
                     <span class="label">Social</span>
                     <ul class="icons-top icons-dark">
                       <li>
-                        <a href="#"><span class="icon-facebook"></span></a>
+                        <a href="https://facebook.com/adorahospitality"><span class="icon-facebook"></span></a>
                       </li>
+                      <!--
                       <li>
                         <a href="#"><span class="icon-twitter"></span></a>
                       </li>
+                      -->
                       <li>
-                        <a href="#"><span class="icon-instagram"></span></a>
+                        <a href="https://www.instagram.com/adorahospitality/"><span class="icon-instagram"></span></a>
                       </li>
+                      <!--
                       <li>
                         <a href="#"><span class="icon-tripadvisor"></span></a>
                       </li>
+                      -->
                     </ul>
                   </div>
                 </div>
@@ -229,7 +236,7 @@
           <div class="container">
             <div class="row">
               <div class="col-12 text-center">
-                <h3 class="m-0 p-0">If you have any special requests, please feel free to call us. <a href="tel://+123456789012">+12.345.678.9012</a></h3>
+                <h3 class="m-0 p-0">If you have any special requests, please feel free to call us. <a href="tel://+917807111209">+917807111209</a> or email at <a href="mailto:info@adorahospitality.com">info@adorahospitality.com </a> </h3>
               </div>
             </div>
           </div>
@@ -257,7 +264,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li>
-                        <a href="booking.html" class="booking-button">Make Reservation Now</a>
+                        <a href="booking-app/booking.html" class="booking-button">Make Reservation Now</a>
                     </li>
                   </ul>
                 </div>
@@ -309,7 +316,7 @@
               </li>
               <li>
               -->
-                <a href="#"><span class="icon-instagram"></span></a>
+                <a href="https://www.instagram.com/adorahospitality/"><span class="icon-instagram"></span></a>
               </li>
                 <!--
               <li>
