--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
             <ul class="site-nav-ul js-clone-nav">
               <li class="active"><a href="index.html">Home</a></li>
               <li class="has-children">
-                <a href="rooms.html">View Properties & Rooms</a>
+                <a href="#">View Properties & Rooms</a>
                 <ul class="dropdown">
                   <li class="has-children">
-                    <a href="#">Old Manali</a>
+                    <a href="rooms.html">View Rooms Types</a>
+                  </li>
+                  <li class="has-children">
+                    <a href="#">Hotels in Old Manali</a>
                     <ul class="dropdown">
                       <li>
                         <a href="#">Starway Homes</a>
@@ -70,7 +73,7 @@
                     </ul>
                   </li>
                   <li class="has-children">
-                    <a href="#">Simsa</a>
+                    <a href="#">Hotels in Simsa</a>
                     <ul class="dropdown">
                       <li>
                         <a href="#">Swiss Cottage</a>
@@ -81,7 +84,7 @@
                       </ul>
                   </li>
                   <li class="has-children">
-                    <a href="#">Prini</a>
+                    <a href="#">Hotels in Prini</a>
                     <ul class="dropdown">
                       <li>
                         <a href="#">Juniper House</a>
@@ -419,7 +422,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li>
-                        <a href="booking.html" class="booking-button">Make Reservation Now</a>
+                        <a href="booking-app/booking.html" class="booking-button">Make Reservation Now</a>
                     </li>
                   </ul>
                 </div>
@@ -470,7 +473,7 @@
               </li>
               <li>
               -->
-                <a href="#"><span class="icon-instagram"></span></a>
+                <a href="https://www.instagram.com/adorahospitality/"><span class="icon-instagram"></span></a>
               </li>
                 <!--
               <li>
