--- a/index.html
+++ b/index.html
@@ -508,6 +508,9 @@
         </div>
       </div>
     </div>
+    <!-- Elfsight Google Reviews | Untitled Google Reviews -->
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-1b400e8d-51b6-4dd3-9713-b247f5fdfb69" data-elfsight-app-lazy></div>
 
     <script src="js/vendor/jquery-3.3.1.min.js"></script>
     <script src="js/vendor/popper.min.js"></script>
