--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
               <li><a href="about.html">About Us</a></li>
               <li><a href="contact.html">Contact Us</a></li>
               <li>
-                  <a href="booking-app/booking.html" class="booking-button">Book & Reserve</a>
+                  <a href="booking-app/index.html" class="booking-button">Book & Reserve</a>
               </li>
             </ul>
           </div>
@@ -253,7 +253,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li>
-                        <a href="booking-app/booking.html" class="booking-button">Make Reservation Now</a>
+                        <a href="booking-app/index.html" class="booking-button">Make Reservation Now</a>
                     </li>
                   </ul>
                 </div>
