--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li>
-                        <a href="booking-app/booking.html" class="booking-button">Make Reservation Now</a>
+                        <a href="booking-app/index.html" class="booking-button">Make Reservation Now</a>
                     </li>
                   </ul>
                 </div>
