Google reviews on app page

--- a/booking-app/index.html
+++ b/booking-app/index.html
@@ -234,6 +234,7 @@
 <section class="testimonial section-padding" data-scroll-index='4'>
   <div class="container">
     <div class="row">
+      <!--
       <div class="col-md-12">
         <div class="sectioner-header text-center white">
           <h3>Testimonials</h3>
@@ -262,6 +263,11 @@
         </div>
       </div>
       </div>
+      -->
+      <!-- Elfsight Google Reviews | Untitled Google Reviews -->
+      <script src="https://static.elfsight.com/platform/platform.js" async></script>
+      <div class="elfsight-app-1b400e8d-51b6-4dd3-9713-b247f5fdfb69" data-elfsight-app-lazy></div>
+
     </div>
   </div>
 </section>
