Google reviews on app page

--- a/booking-app/index.html
+++ b/booking-app/index.html
@@ -393,7 +393,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="sectioner-header text-center white">
-          <h3>Download Adora Booking App and Book Your Stay Seamlessly</h3>
+          <h3>Download Adora Booking App and Book Your Stay Seamlessly in less than a minute. </h3>
           <span class="line"></span>
           <p class="white">Download now and enjoy a beautifully simple interface designed for discerning travelers. Booking your next high-end stay is just a tap away. </p>
         </div>
