Whatsapp chat update

--- a/amenities.html
+++ b/amenities.html
@@ -354,6 +354,14 @@
       </div>
     </div>
 
+     <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
+        <script>
+          var wa_btnSetting = {"btnColor":"#2216c0","ctaText":"Book Via Whatsapp Now","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"right","whatsAppNumber":"917807111209","welcomeMessage":"Welcome to Adora Booking, \nPlease feel free to browse our hotels and book in a minute by visiting: https://adorahospitality.com/\n\nA booking manager will get back you within 2 minutes to discuss your desired booking. \n\nThank you for your patience and We can't wait to have you in the mountain hills. ","zIndex":999999,"btnColorScheme":"light"};
+          window.onload = () => {
+            _waEmbed(wa_btnSetting);
+          };
+        </script>
+
     <script src="js/vendor/jquery-3.3.1.min.js"></script>
     <script src="js/vendor/popper.min.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
