--- a/index.html
+++ b/index.html
@@ -517,14 +517,7 @@
           };
         </script>
 
-    <script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
-        <script>
-          var wa_btnSetting = {"btnColor":"#2216c0","ctaText":"Book Via Whatsapp Now","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"right","whatsAppNumber":"917807111209","welcomeMessage":"What is your name:\n\nYour vacation or trip destination:\n\nEstimated budget range:\n\nAny extra activities needed (example: hiking, fishing, skydiving, etc,...): \n\n","zIndex":999999,"btnColorScheme":"light"};
-          window.onload = () => {
-            _waEmbed(wa_btnSetting);
-          };
-        </script>
-
+    <a href="http://free-website-translation.com/" id="ftwtranslation_button" hreflang="en" title="" style="border:0;"><img src="https://free-website-translation.com/img/fwt_button_en.gif" id="ftwtranslation_image" alt="FWT Homepage Translator" style="border:0;"/></a> <script type="text/javascript" src="https://free-website-translation.com/scripts/fwt.js" /></script>
 
 
     <script src="js/vendor/jquery-3.3.1.min.js"></script>
