--- a/index.html
+++ b/index.html
@@ -517,8 +517,12 @@
           };
         </script>
 
-    <a href="http://free-website-translation.com/" id="ftwtranslation_button" hreflang="en" title="" style="border:0;"><img src="https://free-website-translation.com/img/fwt_button_en.gif" id="ftwtranslation_image" alt="FWT Homepage Translator" style="border:0;"/></a> <script type="text/javascript" src="https://free-website-translation.com/scripts/fwt.js" /></script>
-
+    <!--<a href="http://free-website-translation.com/" id="ftwtranslation_button" hreflang="en" title="" style="border:0;"><img src="https://free-website-translation.com/img/fwt_button_en.gif" id="ftwtranslation_image" alt="FWT Homepage Translator" style="border:0;"/></a> <script type="text/javascript" src="https://free-website-translation.com/scripts/fwt.js" /></script>
+-->
+    <a class="weatherwidget-io" href="https://forecast7.com/en/32d2477d19/manali/" data-label_1="Himachal Pradesh" data-label_2="Manali" data-icons="Climacons Animated" data-theme="weather_one" >Himachal Pradesh Manali</a>
+          <script>
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+          </script>
 
     <script src="js/vendor/jquery-3.3.1.min.js"></script>
     <script src="js/vendor/popper.min.js"></script>
