--- a/booking-app/index.html
+++ b/booking-app/index.html
@@ -412,6 +412,11 @@
 
 <!-------Download End------->
 
+   <a class="weatherwidget-io" href="https://forecast7.com/en/32d2477d19/manali/" data-label_1="Himachal Pradesh" data-label_2="Manali" data-icons="Climacons Animated" data-theme="weather_one" >Himachal Pradesh Manali</a>
+          <script>
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+          </script>
+
 <footer class="footer-copy">
   <div class="container-fluid">
     <div class="row">
