--- a/gallery.html
+++ b/gallery.html
@@ -368,6 +368,10 @@
           };
         </script>
 
+    <a class="weatherwidget-io" href="https://forecast7.com/en/32d2477d19/manali/" data-label_1="Himachal Pradesh" data-label_2="Manali" data-icons="Climacons Animated" data-theme="weather_one" >Himachal Pradesh Manali</a>
+          <script>
+          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+          </script>
 
     <script src="js/vendor/jquery-3.3.1.min.js"></script>
     <script src="js/vendor/popper.min.js"></script>
