Stage: Final updates

--- a/about.html
+++ b/about.html
@@ -153,6 +153,7 @@
                   <h1 class="hero-heading">About Our Luxury Properties</h1>
                   <div class="sub-text w-75">
                     <p> Adora Hospitality offers refined accommodations set in the Himalayan region, where each property combines elegance with functionality. From premium suites to thoughtfully designed rooms, guests enjoy a seamless experience supported by curated amenities and attentive service. </p>
+                    <p><a href="https://insider.adorahospitality.com/" class="Read Adora's Travel Blog & Get Updates">Read more</a></p>
                   </div>
                 </div>
               </div>
@@ -239,7 +240,7 @@
             <div class="col-md-4 pr-md-5">
               <h3>About Us</h3>
               <p>Adora Hospitality offers tailored stays in the heart of the Himalayas, where comfort meets breathtaking natural surroundings. Our properties combine modern amenities with personalized service, ensuring every guest enjoys a seamless and memorable experience in the mountains.</p>
-              <p><a href="#" class="readmore">Read more</a></p>
+              <p><a href="https://insider.adorahospitality.com/" class="readmore">Read more</a></p>
             </div>
             <div class="col-md-8 ml-auto">
               <div class="row">
