--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <div class="col-md-4 pr-md-5">
               <h3>About Us</h3>
               <p>Adora Hospitality offers tailored stays in the heart of the Himalayas, where comfort meets breathtaking natural surroundings. Our properties combine modern amenities with personalized service, ensuring every guest enjoys a seamless and memorable experience in the mountains.</p>
-              <p><a href="#" class="readmore">Read more</a></p>
+              <p><a href="https://insider.adorahospitality.com/" class="readmore">Read more</a></p>
             </div>
             <div class="col-md-8 ml-auto">
               <div class="row">
