--- a/contact.html
+++ b/contact.html
@@ -250,7 +250,7 @@
             <div class="col-md-4 pr-md-5">
               <h3>About Us</h3>
               <p>A hotel is an establishment that provides paid lodging on a short-term basis. Facilities provided may range from a modest-quality.</p>
-              <p><a href="#" class="readmore">Read more</a></p>
+              <p><a href="https://insider.adorahospitality.com/" class="readmore">Read more</a></p>
             </div>
             <div class="col-md-8 ml-auto">
               <div class="row">
